--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "path": "^0.12.7"
   },
+  "repository": "https://github.com/szjyp226/react-dynamic-router-loader",
   "author": "",
   "license": "ISC",
   "keywords": [
